Developed the box model branch

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
  <html>
      <head>
         <link              
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet" />
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet" 
+        />
          <title>My Portfolio</title>
          <link rel="stylesheet" href="./styles/main.css" type="text/css">         
          <script src="https://kit.fontawesome.com/e4f51fe795.js" crossorigin="anonymous"></script>
@@ -37,12 +38,12 @@
         </header>
         <main class="Main">
             <section class="About" id="about">
-                <div class="Main__aboutContent">
-                    <h4 class="About__title">About</h4>
-                    <h2 class="About__subTitle">My name is Victoria Pérez</h2>
-                    <div class="About__imgContainer">
-                        <img class="About__img" src="./assets/Profile Picture.JPG" alt="Profile Picture" width="340px">
-                    </div>
+                <h4 class="About__title">About</h4>
+                <h2 class="About__subTitle">My name is Victoria Pérez</h2>
+                <div class="About__imgContainer">
+                    <img class="About__img" src="./assets/Profile Picture.JPG" alt="Profile Picture" width="340px">
+                </div>
+                <div class="Main__aboutContent">                    
                     <div class="About__bioContent">
                         <p class="About__bio">
                             Traction bandwidth holy grail mass market sales twitter stealth. Founders facebook entrepreneur leverage stealth client accelerator. Entrepreneur supply chain pivot business-to-consumer hypotheses holy grail A/B testing gen-z backing learning curve accelerator. Rockstar market validation metrics monetization technology android vesting period hypotheses success prototype early adopters. Twitter seed money success ramen termsheet iPad crowdfunding leverage iteration. Scrum project A/B testing seed money gamification marketing. Agile development supply chain facebook backing niche market direct mailing. Success deployment agile development buyer return on investment. Monetization MVP startup beta conversion backing bootstrapping traction. Low hanging fruit virality learning curve stealth paradigm shift termsheet network effects graphical user interface business-to-business beta.
