Developed layout of portfolio

--- a/index.html
+++ b/index.html
@@ -2,16 +2,25 @@
  <html>
      <head>
         <link              
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet" 
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" 
+        rel="stylesheet" 
         />
-         <title>My Portfolio</title>
          <link rel="stylesheet" href="./styles/main.css" type="text/css">         
-         <script src="https://kit.fontawesome.com/e4f51fe795.js" crossorigin="anonymous"></script>
+         
+         <title>My Portfolio</title>
+         
+         <meta name="viewport" content="width=device-width, initial-scale=1" />
+         <meta charset="utf-8" />
+
+         <script 
+         src="https://kit.fontawesome.com/e4f51fe795.js" 
+         crossorigin="anonymous"
+         ></script>
      </head>
     <body id="home">              
-        <header class="Header">
-            <h1 class="Header__logo">victoria</h1>
+        <header class="Header">            
             <nav class="Header__navbar">
+                <h1 class="Header__logo">victoria</h1>
                 <div class="Header__navigation">
                     <ul class="Header__navContent">
                         <li class="Header__navItem">
@@ -36,20 +45,19 @@
                 </p>
             </section>
         </header>
-        <main class="Main">
+        <main class="Container">
             <section class="About" id="about">
                 <h4 class="About__title">About</h4>
                 <h2 class="About__subTitle">My name is Victoria Pérez</h2>
                 <div class="About__imgContainer">
-                    <img class="About__img" src="./assets/Profile Picture.JPG" alt="Profile Picture" width="340px">
-                </div>
-                <div class="Main__aboutContent">                    
-                    <div class="About__bioContent">
+                    <img class="About__img" src="./assets/Profile Picture.JPG" alt="Profile Picture" />
+                </div>                                
+                    <div class="About__content">
                         <p class="About__bio">
-                            Traction bandwidth holy grail mass market sales twitter stealth. Founders facebook entrepreneur leverage stealth client accelerator. Entrepreneur supply chain pivot business-to-consumer hypotheses holy grail A/B testing gen-z backing learning curve accelerator. Rockstar market validation metrics monetization technology android vesting period hypotheses success prototype early adopters. Twitter seed money success ramen termsheet iPad crowdfunding leverage iteration. Scrum project A/B testing seed money gamification marketing. Agile development supply chain facebook backing niche market direct mailing. Success deployment agile development buyer return on investment. Monetization MVP startup beta conversion backing bootstrapping traction. Low hanging fruit virality learning curve stealth paradigm shift termsheet network effects graphical user interface business-to-business beta.
+                            Traction bandwidth holy grail mass market sales twitter stealth. Founders facebook entrepreneur leverage stealth client accelerator. Entrepreneur supply chain pivot business-to-consumer hypotheses holy grail A/B testing gen-z backing learning curve accelerator. Rockstar market validation metrics monetization technology android vesting period hypotheses success prototype early adopters.
                         </p>
                         <p class="About__bio">
-                            Traction bandwidth holy grail mass market sales twitter stealth. Founders facebook entrepreneur leverage stealth client accelerator. Entrepreneur supply chain pivot business-to-consumer hypotheses holy grail A/B testing gen-z backing learning curve accelerator. Rockstar market validation metrics monetization technology android vesting period hypotheses success prototype early adopters. Twitter seed money success ramen termsheet iPad crowdfunding leverage iteration. Scrum project A/B testing seed money gamification marketing. Agile development supply chain facebook backing niche market direct mailing. Success deployment agile development buyer return on investment. Monetization MVP startup beta conversion backing bootstrapping traction. Low hanging fruit virality learning curve stealth paradigm shift termsheet network effects graphical user interface business-to-business beta.
+                            Traction bandwidth holy grail mass market sales twitter stealth. Founders facebook entrepreneur leverage stealth client accelerator. Entrepreneur supply chain pivot business-to-consumer hypotheses holy grail A/B testing gen-z backing learning curve accelerator. Rockstar market validation metrics monetization technology android vesting period hypotheses success prototype early adopters.
                         </p>
                         <button class="btn About__btn">Download Resume</button>
                     </div>
@@ -57,96 +65,137 @@
             </section>
             <section class="Work" id="work">
                 <h4 class="Work__title">Work</h4>
-                    <h2 class="Work__subTitle">Latest Projects</h2>
-                <div class="Main__project">
-                    <div class="Work__projectImgContainer">
-                        <img src="./assets/412-300x300.jpg" alt="random image" class="Work__projectImg">
+                <h2 class="Work__subTitle">Latest Projects</h2>
+                <div class="Work_projects">
+                    <div class="Work__project">
+                        <div class="Work__projectImgContainer">
+                        <img 
+                        class="Work__projectImg"
+                        src="./assets/412-300x300.jpg" alt="random image" 
+                        />
                     </div>
-                    <div class="Main__projectContent">
+                    <div class="Work__projectContent">
                         <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-                        <p class="ProjectInfo">
+                        <p class="Work__projectInfo">
                             Incubator sales graphical user interface mass market funding user experience network effects channels.
                         </p>
                     </div>
-                </div>
-                <div class="Main__project">
-                    <div class="Work__projectImgContainer">
-                        <img src="./assets/412-300x300.jpg" alt="random image" class="Work__projectImg">
+                </div>                
+                    <div class="Work__project">
+                        <div class="Work__projectImgContainer">
+                        <img 
+                        class="Work__projectImg"
+                        src="./assets/412-300x300.jpg" alt="random image" 
+                        />
                     </div>
-                    <div class="Main__projectContent">
+                    <div class="Work__projectContent">
                         <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-                        <p class="ProjectInfo">
+                        <p class="Work__projectInfo">
                             Incubator sales graphical user interface mass market funding user experience network effects channels.
                         </p>
                     </div>
-                </div>
-                <div class="Main__project">
-                    <div class="Work__projectImgContainer">
-                        <img src="./assets/412-300x300.jpg" alt="random image" class="Work__projectImg">
+                </div>                
+                    <div class="Work__project">
+                        <div class="Work__projectImgContainer">
+                        <img 
+                        class="Work__projectImg"
+                        src="./assets/412-300x300.jpg" alt="random image" 
+                        />
                     </div>
-                    <div class="Main__projectContent">
+                    <div class="Work__projectContent">
                         <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-                        <p class="ProjectInfo">
+                        <p class="Work__projectInfo">
                             Incubator sales graphical user interface mass market funding user experience network effects channels.
                         </p>
                     </div>
-                </div>
-                <div class="Main__project">
-                    <div class="Work__projectImgContainer">
-                        <img src="./assets/412-300x300.jpg" alt="random image" class="Work__projectImg">
+                </div>                
+                    <div class="Work__project">
+                        <div class="Work__projectImgContainer">
+                        <img 
+                        class="Work__projectImg"
+                        src="./assets/412-300x300.jpg" alt="random image" 
+                        />
                     </div>
-                    <div class="Main__projectContent">
+                    <div class="Work__projectContent">
                         <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-                        <p class="ProjectInfo">
+                        <p class="Work__projectInfo">
                             Incubator sales graphical user interface mass market funding user experience network effects channels.
                         </p>
                     </div>
-                </div>
-                <div class="Main__project">
-                    <div class="Work__projectImgContainer">
-                        <img src="./assets/412-300x300.jpg" alt="random image" class="Work__projectImg">
+                </div>                
+                    <div class="Work__project">
+                        <div class="Work__projectImgContainer">
+                        <img 
+                        class="Work__projectImg"
+                        src="./assets/412-300x300.jpg" alt="random image" 
+                        />
                     </div>
-                    <div class="Main__projectContent">
+                    <div class="Work__projectContent">
                         <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-                        <p class="ProjectInfo">
+                        <p class="Work__projectInfo">
                             Incubator sales graphical user interface mass market funding user experience network effects channels.
                         </p>
                     </div>
-                </div>
-                <div class="Main__project">
-                    <div class="Work__projectImgContainer">
-                        <img src="./assets/412-300x300.jpg" alt="random image" class="Work__projectImg">
+                </div>                
+                    <div class="Work__project">
+                        <div class="Work__projectImgContainer">
+                        <img 
+                        class="Work__projectImg"
+                        src="./assets/412-300x300.jpg" alt="random image" 
+                        />
                     </div>
-                    <div class="Main__projectContent">
+                    <div class="Work__projectContent">
                         <h3 class="Work__projectTitle"><strong>Project Title</strong></h3>
-                        <p class="ProjectInfo">
+                        <p class="Work__projectInfo">
                             Incubator sales graphical user interface mass market funding user experience network effects channels.
                         </p>
                     </div>
-                </div>
+                </div>                
             </section>
             <section class="Contact" id="contact">
                 <h4 class="Contact__title">Contact</h4>
                 <h2 class="Contact__subTitle">Get In Touch</h2>
                 <div class="Contact__formContainer">
-                    <form action="" method="POST" class="Contact__form">
+                    <form action="/" method="POST" class="Contact__form">
                         <div class="Contact__inputs">
                             <div class="Contact__formField">
-                                <label for="name" class="Contact__label">Name:</label>
-                                <input type="text" name="name" id="name" class="Contact__input" required>
+                                <label class="Contact__label" for="name">Name:</label>
+                                <input 
+                                type="text" 
+                                name="name" 
+                                id="name" 
+                                required
+                                class="Contact__input"
+                                />
                             </div>
                             <div class="Contact__formField">
-                                <label for="email" class="Contact__label">Email:</label>
-                                <input type="text" name="email" id="email" class="Contact__input" required>
+                                <label class="Contact__label" for="email">Email:</label>
+                                <input 
+                                type="email" 
+                                name="email" 
+                                id="email"
+                                required
+                                class="Contact__input"
+                                />
                             </div>
                             <div class="Contact__formField">
-                                <label for="phone" class="Contact__label">Phone Number:</label>
-                                <input type="text" name="phone" id="phone" class="Contact__input" required>
-                            </div>
+                                <label class="Contact__label" for="phone">Phone Number:</label>
+                                <input 
+                                type="text" 
+                                name="phone" 
+                                id="phone" 
+                                required
+                                class="Contact__input"
+                                />
+                            </div>                            
                         </div>
                         <div class="Contact__MessageField">
-                            <label for="message" class="Contact__label">Message</label>
-                            <textarea name="message" id="message" class="Contact__message"></textarea>
+                            <label class="Contact__label" for="message">Message</label>
+                            <textarea 
+                            name="message" 
+                            id="message" 
+                            class="Contact__message"
+                            ></textarea>
                         </div>
                         <button type="submit" class="btn Contact__btn">Submit</button>
                     </form>
@@ -156,19 +205,41 @@
     <footer class="Footer">
         <section class="Footer__content">
             <p class="Footer__copyright"> &copy; 2020 Developed by Victoria Pérez</p>
-            <ul class="Footer__socialList">
-                <li class="Footer__socialItem"><a href="http://www.github.com/zegawat" class="Footer__socialLink" target="_blank">
+            <ul class="Footer__socials">
+                <li class="Footer__socialItem">
+                    <a 
+                    class="Footer__socialLink" 
+                    href="http://www.github.com/zegawat"                     
+                    target="_blank"
+                    >
                     <i class="fab fa-github"></i>
-                </a></li>
-                <li class="Footer__socialItem"><a href="http://www.linkedin.com/in/victoriaagustinaperez" class="Footer__socialLink" target="_blank">
+                    </a>
+                </li>
+                <li class="Footer__socialItem">
+                    <a
+                    class="Footer__socialLink" 
+                    href="http://www.linkedin.com/in/victoriaagustinaperez"
+                    target="_blank"
+                    >
                     <i class="fab fa-linkedin-in"></i>                
-                </a></li>
-                <li class="Footer__socialItem"><a href="https://codepen.io/zegawat" class="Footer__socialLink" target="_blank">
+                    </a>
+                </li>
+                <li class="Footer__socialItem">
+                    <a 
+                    class="Footer__socialLink" 
+                    href="https://codepen.io/zegawat"
+                    target="_blank">
                     <i class="fab fa-codepen"></i>
-                </a></li>
-                <li class="Footer__socialItem"><a href="https://www.instagram.com/vicsintech/" class="Footer__socialLink" target="_blank">
+                </a>
+                </li>
+                <li class="Footer__socialItem">
+                    <a 
+                    class="Footer__socialLink" 
+                    href="https://www.instagram.com/vicsintech/" 
+                    target="_blank">
                     <i class="fab fa-instagram"></i>                
-                </a></li>                
+                </a>
+                </li>                
             </ul>
         </section>
     </footer>
