styled tablet breakpoint

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="About__imgContainer">
                     <img class="About__img" src="./assets/Profile Picture.JPG" alt="Profile Picture" />
                 </div>                                
-                    <div class="About__content">
+                    <div class="About__bioContent">
                         <p class="About__bio">
                             Traction bandwidth holy grail mass market sales twitter stealth. Founders facebook entrepreneur leverage stealth client accelerator. Entrepreneur supply chain pivot business-to-consumer hypotheses holy grail A/B testing gen-z backing learning curve accelerator. Rockstar market validation metrics monetization technology android vesting period hypotheses success prototype early adopters.
                         </p>
