fixed formatting errors

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <section class="About" id="about">
                 <h4 class="About__title">About</h4>
                 <h2 class="About__subTitle">My name is Victoria Pérez</h2>
+                <div class="About__content">
                 <div class="About__imgContainer">
                     <img class="About__img" src="./assets/Profile Picture.JPG" alt="Profile Picture" />
                 </div>                                
@@ -66,7 +67,7 @@
             <section class="Work" id="work">
                 <h4 class="Work__title">Work</h4>
                 <h2 class="Work__subTitle">Latest Projects</h2>
-                <div class="Work_projects">
+                <div class="Work__projects">
                     <div class="Work__project">
                         <div class="Work__projectImgContainer">
                         <img 
